fix: fix alignment issue of venture images

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -260,7 +260,7 @@ nav {
 /* Ventures */
 .venture-img {
     height: 15rem;
-    width: 100%;
+    width: 90%;
 }
 
 /* PAYMENT */
